<resources>
	<string name="warning">Warning</string>
	<string name="error">Error</string>
    <string name="confirm">Confirm</string>
    <string name="stop">Stop</string>
    <string name="app_name">Arbiter-Android</string>
    <string name="action_findme">Find me</string>
    <string name="default_project_name">_ARBITER_DEFAULT_PROJECT_</string>
	<string name="delete">Delete</string>
	<string name="update">Update</string>
	<string name="default_layer_name">OpenStreetMap</string>
	<string name="project_exists_title">Project Exists</string>
	<string name="project_already_exists">Project already exists.  Please create a new project with a different name.</string>
	<string name="project_creation_failed">Project creation failed</string>
	<string name="project_creation_failed_message">Could not create project.  Check to see if you are out of disk space.</string>
	<string name="create_project_progress">Creating project.</string>
	<string name="create_project_msg">Project being created&#8230;</string>
	<string name="error_aoi_create_project">You must create a project before selecting an area of interest.</string>
	<string name="error_creating_project">Error</string>
	<string name="error_creating_project_msg">Could not create project!</string>
	<string name="error_loading_features">Error</string>
	<string name="error_loading_features_msg">Could not create project!</string>
	<string name="error_adding_layers">Error</string>
	<string name="error_adding_layers_msg">Couldn\'t add selected layers!</string>
	<string name="adding_layers">Adding layers</string>
	<string name="adding_layers_msg">Adding layers to the map&#8230;</string>
	<string name="feature_dialog_title">Feature</string>
	<string name="latitude">Latitude</string>
	<string name="longitude">Longitude</string>
	<string name="example_longitude">ex. </string>
	<string name="example_latitude">ex. </string>
	<string name="back">Back</string>
	<string name="edit_attributes">Edit</string>
	<string name="done_editing">Save</string>
	<string name="delete_feature">Delete</string>
	<string name="edit_feature">Map</string>
	<string name="cancel">Cancel</string>
	<string name="update_feature_title">Update</string>
	<string name="update_feature_msg">Update the feature?</string>
	<string name="updating">Updating</string>
	<string name="updating_msg">Update in progress&#8230;</string>
	<string name="insert_feature_title">Select layer to insert into.</string>
	<string name="insert_layer_title">Inserting into:</string>
	<string name="insert_layer_text">Mode: Insert</string>
	<string name="feature_saved">Feature saved</string>
	<string name="feature_saved_msg">The feature has been saved.</string>
	<string name="return_to_map">Return to Map</string>
	<string name="picture_source">Select Source</string>
	<string name="select_picture_source">Add a photo...</string>
	<string name="from_camera">From Camera</string>
	<string name="from_library">From Photo Library</string>
	<string name="review_feature">Review Feature</string>
	<string name="insert_feature_warning">Insert feature</string>
	<string name="insert_feature_warning_msg">Insert the feature?</string>
	<string name="delete_feature_warning">Delete feature</string>
	<string name="delete_feature_warning_msg">Are you sure you want to delete this feature?</string>
	<string name="deleting_msg">Deletion in progress&#8230;</string>
	<string name="sync_in_progress">Syncing</string>
	<string name="sync_in_progress_msg">Sync in progress&#8230;</string>
	<string name="error_syncing">Error</string>
	<string name="error_syncing_msg">Unable to sync</string>
	<string name="project_incomplete_msg">Project is not available offline. \n\nPlease select an area of interest.</string>
	<string name="click_me">( Click me )</string>
	<string name="media">media</string>
	<string name="take_picture">Take picture</string>
	<string name="initializing">Initializing</string>
	<string name="please_wait">Please wait&#8230;</string>
	<string name="update_aoi_alert">Area of Interest</string>
	<string name="update_aoi_alert_msg">Updating your area of interest will also sync any changes you have made.</string>
	<string name="error_updating_aoi">Error</string>
	<string name="error_updating_aoi_msg">Could not update the area of interest!</string>
	<string name="loading_feature_info">Feature is loading&#8230; Please wait&#8230;</string>
	<string name="loading">Loading</string>
	<string name="no_network">No Network Connection</string>
	<string name="check_network_connection">Please check your network connection.</string>
	<string name="layers_limit">Layer limit reached</string>
	<string name="too_many_layers">You have reached the maximum layers per project.</string>
	<string name="downloading_schemas">Downloading Schemas</string>
	<string name="downloading_tiles">Downloading Tiles</string>
	<string name="tile_cache_warning">Tiles to download:</string>
	<string name="syncing_media_title">Syncing Media</string>
	<string name="syncing_vector_data">Syncing Vector Data</string>
	<string name="downloaded">Downloaded: </string>
	<string name="uploaded">Uploaded: </string>
	<string name="form_error_date">Please enter a valid date.</string>
	<string name="form_error_integer">Please enter a valid integer.</string>
	<string name="form_error_double">Please enter a valid number.</string>
	<string name="form_error_long">Please enter a valid number.</string>
	<string name="form_error_float">Please enter a valid number.</string>
	<string name="form_error_bool">Please enter true or false.</string>
	<string name="check_errors">Invalid entries</string>
	<string name="check_errors_msg">Please fix errors before continuing.</string>
	<string name="loading_layers_please_wait">Loading layers from server. Please wait.</string>
    <string name="map_activity_name">Arbiter</string>
    <string name="action_new_feature">Draw</string>
    <string name="action_servers">Servers</string>
    <string name="action_projects">Projects</string>
    <string name="action_aoi">Area of Interest</string>
    <string name="action_language">Language</string>
    <string name="layers_button">Layers</string>
    <string name="sync_button">Sync</string>
    <string name="location_button">Find me</string>
	<string name="aoi_button">Zoom to AOI</string>
    <string name="projects_activity_name">Projects</string>
    <string name="delete_project">Delete project</string>
    <string name="action_new_project">New project</string>
    <string name="switch_project_title">Switch Project</string>
    <string name="switch_project">Switch to this project?</string>
    <string name="layers_dialog_title">Layers</string>
    <string name="add_layers_button">Add Layers</string>
    <string name="action_add_layers">Add Layers</string>
    <string name="layer_visibility_off">Off</string>
    <string name="layer_visibility_on">On</string>
    <string name="remove_layer">Remove layer</string>
    <string name="action_tilesets">Tilesets</string>
    <string name="add_tileset_button">Add Tileset</string>
    <string name="tileset_dialog_title">Tilesets</string>
    <string name="add_tileset_dialog_title">Add Tileset</string>
    <string name="remove_tileset">Remove Tileset</string>
    <string name="tileset_list_names">Tilesets</string>
    <string name="loading_tilesets_getcapabilities">Loading Tilesets..</string>
    <string name="delete_tileset_button">Delete</string>
    <string name="update_tileset_button">Update</string>
    <string name="check_update_tilesets">Check for Updates</string>
    <string name="tileset_name">NAMEME</string>
    <string name="deleting_tileset">Deleting Tileset</string>
    <string name="deleting_tileset_msg">Tileset deletion in progress..</string>
    <string name="delete_tileset_alert">Are you sure you want to delete </string>
    <string name="tileset_filesize">Size: 007GB</string>
    <string name="downloading_tileset">Download</string>
    <string name="downloading_tileset_msg">This download will be </string>
    <string name="downloading_tileset_msg2">Are you sure you want to continue?</string>
    <string name="space_available">Available Space: </string>
    <string name="space_after_download">After Download: </string>
    <string name="tileset_info_name">Name: </string>
    <string name="tileset_info_time_created">Time Created: </string>
    <string name="tileset_info_created_by">Created By: </string>
    <string name="tileset_info_filesize">Filesize: </string>
    <string name="tileset_info_server">Server: </string>
    <string name="tileset_info_status">Status: </string>
    <string name="tileset_info_resource_uri">Resource URI: </string>
    <string name="tileset_info_service_type">Service Type: </string>
    <string name="tileset_info_download_url">Download URL: </string>
    <string name="tileset_info_server_url">Server URL: </string>
    <string name="tileset_info_server_username">Server Username: </string>
    <string name="tileset_info_server_id">Server ID: </string>
    <string name="tileset_cancel_download_title">Cancelling Download</string>
    <string name="tileset_cancel_download_msg">Stopping download..</string>
    <string name="cancel_download_tileset_alert">Are you sure you want to cancel the download for</string>
    <string name="error_retrieving_tileset">Error Retrieving Tileset</string>
    <string name="tileset_info_title">Tileset Info</string>
    <string name="error_connecting_tileset1">Error when trying to connect to</string>
    <string name="error_connecting_tileset2">Please check your connection and try again.</string>
    <string name="tileset_status_downloading">Downloading..</string>
    <string name="tileset_status_in_database">In Database</string>
    <string name="tileset_status_on_server">On Server</string>
    <string name="tileset_started_downloading_msg">Started downloading</string>
    <string name="tileset_finished_downloading_msg">Finished downloading</string>
    <string name="not_enough_space">Not Enough Space</string>
    <string name="not_enough_space_msg1">You do not have enough free space to download</string>
    <string name="not_enough_space_msg2">Consider freeing up space and trying again.</string>
    <string name="no_available_tileset_title">Error Retrieving Tilesets</string>
    <string name="no_available_tileset_msg">did not return any tilesets. Please check your connection or the server information and try again.</string>
    <string name="tileset_download_error_msg">The file was not downloaded. The download link was invalid or the current network connection is unavailable.</string>
    <string name="no_tilesets_returned_msg">was found, but did not return any tilesets. Please make sure the server has valid Tilesets.</string>
    <string name="tileset_zero_filesize">has a filesize of 0. Please make sure the tileset was generated correctly.</string>
    <string name="server_name_hint">Name</string>
    <string name="server_url_hint">ex. http://example.com/geoserver</string>
    <string name="server_username_hint">Username</string>
    <string name="server_password_hint">Password</string>
    <string name="retry_sync">Try again?</string>
    <string name="vector_upload_errors_label">Vector layers that failed on upload:</string>
    <string name="vector_download_errors_label">Vector layers that failed to download:</string>
    <string name="media_upload_errors_label">Media that failed to upload:</string>
    <string name="media_download_errors_label">Media that failed to download:</string>
    <string name="layer_order">Layer order</string>
    <string name="move_down">Move down</string>
    <string name="move_up">Move up</string>
    <string name="download_photos">Download photos for features</string>
    <string name="disable_wms">Disable WMS for non-base layers</string>
    <string name="no_con_checks">Ignore connection status (requires restart)</string>
    <string name="always_show_location">Always show current location (drains battery)</string>
</resources>