<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical" >
	    
        <EditText
	        android:id="@+id/server_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="20dip"
	        android:layout_marginTop="20dip"
	        android:ems="10"
	        android:hint="@string/server_name_hint" >

	        <requestFocus />
	    </EditText>
	    
	    <EditText
	        android:id="@+id/server_url"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="20dip"
	        android:ems="10"
	        android:hint="@string/server_url_hint"
	        android:inputType="textUri" >

	        <requestFocus />
	    </EditText>

	    <EditText
	        android:id="@+id/server_username"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="20dip"
	        android:ems="10"
	        android:hint="@string/server_username_hint" >

	        <requestFocus />
	    </EditText>
	    
	    <EditText
	        android:id="@+id/server_password"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="40dip"
	        android:ems="10"
	        android:hint="@string/server_password_hint"
	        android:inputType="textPassword" >

	        <requestFocus />
	    </EditText>
	</LinearLayout>
</ScrollView>