<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!--  ListRow Left sied ToggleButton -->
    <LinearLayout android:id="@+id/visibilityToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dip">
 
        <ToggleButton
            android:id="@+id/layerVisibility"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:onClick="toggleLayerVisibility"
            android:textOff="@string/layer_visibility_off"
            android:textOn="@string/layer_visibility_on"/>
 
    </LinearLayout>

	<!-- Layer name-->
    <TextView
        android:id="@+id/layerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/visibilityToggle"
        android:layout_toRightOf="@+id/visibilityToggle"
        android:text="@string/projects_activity_name"
        android:textColor="#040404"
        android:typeface="sans"
        android:textSize="14sp"
        android:textStyle="bold"/>
    
    <!-- Server name -->
    <TextView
        android:id="@+id/serverName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layerName"
        android:textColor="#343434"
        android:textSize="12sp"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/visibilityToggle"
        android:text="@string/default_server_name_hint" />
    
    <!-- Remove Layer button -->
    <ImageView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_delete"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/remove_layer"/>
    
</RelativeLayout>
