<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <org.apache.cordova.CordovaWebView
        android:id="@+id/webView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

    <ImageButton
        android:id="@+id/layersButton"
        android:src="@drawable/layers"
        android:contentDescription="@string/layers_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="24dp" 
        android:padding="0dp"/>

    <ImageButton
        android:id="@+id/locationButton"
        android:src="@drawable/location"
        android:contentDescription="@string/location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="17dp"
        android:layout_marginTop="24dp" 
        android:padding="0dp"/>
    
    <ImageButton
        android:id="@+id/syncButton"
        android:src="@drawable/sync"
        android:contentDescription="@string/sync_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="17dp"
        android:layout_marginBottom="24dp" 
        android:padding="8dp"/>
    
    <ImageButton
        android:id="@+id/AOIButton"
        android:src="@drawable/aoi"
        android:contentDescription="@string/aoi_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="24dp" 
        android:padding="2dp"/>
    
    <RelativeLayout
        android:id="@+id/editFeatureButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="gone">
        
		<ImageButton
	        android:id="@+id/cancelButton"
	        android:src="@drawable/cancel"
	        android:contentDescription="@string/cancel_editing"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginTop="24dp"
	        android:padding="0dp"/>
	    
	    <ImageButton
	        android:id="@+id/doneButton"
	        android:src="@drawable/checkmark"
	        android:contentDescription="@string/done_editing"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/cancelButton"
	        android:layout_marginLeft="20dp"
	        android:layout_marginTop="24dp"
	        android:layout_alignParentTop="true"
	        android:padding="8dp"/>
    </RelativeLayout>
    
</RelativeLayout>
