<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center">
        
        <ImageButton
	        android:id="@+id/layer_order"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/layer_order"
	        android:src="@drawable/sorting" />
    
        <ImageButton
	        android:id="@+id/cancelOrderingLayers"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="30dp"
	        android:padding="0dp"
	        android:contentDescription="@string/cancel_editing"
	        android:src="@drawable/cancel"
	        android:visibility="gone" />
        
        <ImageButton
	        android:id="@+id/doneOrderingLayers"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="30dp"
	        android:contentDescription="@string/done_editing"
	        android:src="@drawable/checkmark"
	        android:visibility="gone" />
        
   		<ImageButton
	        android:id="@+id/add_layers_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="30dp"
	        android:contentDescription="@string/add_layers_button"
	        android:src="@drawable/content_new_black" />
   		
    </LinearLayout>
    
    
    <ListView
        android:id="@+id/layersListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="1dp" >
    </ListView>
</LinearLayout>
